--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -41,7 +38,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
     "prettier": "2.5.1",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "webpack-cli": "^4.9.2"
+  },
+  "babel": {
+    "presets": [
+      "babel-preset-react-app"
+    ]
   }
 }
