--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
   "devDependencies": {
     "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.12",
+    "@types/redux-immutable-state-invariant": "^2.1.2",
     "prettier": "2.5.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-immutable-state-invariant": "^2.1.0",
     "webpack-cli": "^4.9.2"
   },
   "babel": {
