--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.25.0",
     "react": "^18.1.0",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "~4.1.5"
   },
   "scripts": {
