--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^0.25.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
     "typescript": "~4.1.5"
   },
   "scripts": {
