--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/core": "^7.16.12",
     "prettier": "2.5.1",
     "redux-devtools-extension": "^2.13.9",
+    "tailwindcss": "^3.4.13",
     "webpack-cli": "^4.9.2"
   },
   "babel": {
